olcs-28073 fix error when calling count() on empty variable

--- a/app/internal/module/Olcs/view/sections/cases/partials/right.phtml
+++ b/app/internal/module/Olcs/view/sections/cases/partials/right.phtml
@@ -27,10 +27,10 @@ if (isset($case['licence']) && !empty($case['licence'])): ?>
   <h4 class="title">Licence details</h4>
     <p class="small-module__details">
       <a href="<?php echo $this->url('lva-licence', ['licence' => $case['licence']['id']], [], false); ?>"><?php echo $case['licence']['licNo']; ?></a><br>
-      <?php if (!empty($case['licence']['licenceType']) || count($case['licence']['licenceType']) > 0) : ?>
+      <?php if (isset($case['licence']['licenceType']['id'])) : ?>
         <?php echo $this->translate($case['licence']['licenceType']['id']); ?><br/>
       <?php endif; ?>
-      <?php if (!empty($case['licence']['status']) || count($case['licence']['status']) > 0) : ?>
+      <?php if (isset($case['licence']['status']['id'])) : ?>
         <?php echo $this->translate($case['licence']['status']['id']); ?>
         <?php endif; ?>
     </p>
