OLCS-28061 - Zend to Laminas clean up

--- a/app/selfserve/module/Olcs/view/partials/page-header.phtml
+++ b/app/selfserve/module/Olcs/view/partials/page-header.phtml
@@ -69,7 +69,7 @@
                     continue;
                 }
 
-                //  zend element
+                //  laminas element
                 $tmpElm = clone $element;
                 $tmpElm->setAttribute('class', 'page-header__action');
                 ?>
