OLCS-28061 - Zend to Laminas clean up

--- a/app/internal/module/Olcs/view/sections/licence/partials/left.phtml
+++ b/app/internal/module/Olcs/view/sections/licence/partials/left.phtml
@@ -1,7 +1,7 @@
 <h4 class="title"><?php echo $this->translate('licence-details-nav'); ?></h4>
 <?php
 /**
- * @todo Needs changing for Zend Navigation
+ * @todo Needs changing for Laminas Navigation
  */
 if (isset($this->sections)): ?>
     <ol class="vertical-navigation" role="menu">
