--- a/app/internal/module/Olcs/view/sections/application/partials/left.phtml
+++ b/app/internal/module/Olcs/view/sections/application/partials/left.phtml
@@ -12,7 +12,14 @@
             <?php if (!$current && $details['enabled']) : ?>
             <a href="<?php echo $this->url($details['route'], ['application' => $lvaId]); ?>">
                 <?php endif; ?>
-                <?php echo $this->translate('section.name.' . $reference); ?>
+                <?php
+                    $sectionName = $reference;
+                    if (isset($details['alias'])) {
+                        $sectionName = $details['alias'];
+                    }
+
+                    echo $this->translate('section.name.' . $sectionName);
+                ?>
                 <?php if (!$current && $details['enabled']) : ?>
             </a>
         <?php endif; ?>
