--- a/app/selfserve/module/Olcs/view/partials/page-header-simple.phtml
+++ b/app/selfserve/module/Olcs/view/partials/page-header-simple.phtml
@@ -20,13 +20,13 @@
 
     <div class="page-header__wrapper">
         <?php if (!empty($this->pageSubTitle)) : ?>
-            <h3 class="page-header__subtitle"><?php
+            <span class="page-header__subtitle page-header__h3"><?php
                 echo (
                     $this->pageSubTitleEscape === false
                     ? $this->pageSubTitle
                     : $this->escapeHtml($this->pageSubTitle)
                 )
-            ?></h3>
+            ?></span>
         <?php endif; ?>
 
         <h1 class="js-title"><?php
