VOL-914: Replace aside with div

--- a/app/selfserve/module/Olcs/view/overview-application.phtml
+++ b/app/selfserve/module/Olcs/view/overview-application.phtml
@@ -36,7 +36,7 @@
   </div>
 
   <div class="one-third">
-    <aside class="sidebar" role="complementary">
+    <div class="sidebar" role="complementary">
       <div class="info-box info-box--grey">
         <h3 class="info-box__heading"><?php echo $this->translate('progress'); ?></h3>
         <h4 class="info-box__heading"><?php echo sprintf($this->translate('application.progress'), $progressX, $progressY); ?></h4>
@@ -75,6 +75,6 @@
         </div>
       <?php endif; ?>
   
-    </aside>
+    </div>
   </div>
 </div>
