--- a/app/selfserve/module/Olcs/view/overview-variation.phtml
+++ b/app/selfserve/module/Olcs/view/overview-variation.phtml
@@ -35,7 +35,7 @@
     </ul>
   </div>
   <div class="one-third">
-    <aside class="sidebar" role="complementary">
+    <div class="sidebar" role="complementary">
 
       <div class="info-box info-box--grey">
         <h3 class="info-box__heading"><?php echo $this->translate('progress'); ?></h3>
@@ -74,6 +74,6 @@
         <?php endif; ?>
       </dl>
       -->
-    </aside>
+    </div>
   </div>
 </div>
