--- a/app/selfserve/module/Olcs/view/pages/application-summary.phtml
+++ b/app/selfserve/module/Olcs/view/pages/application-summary.phtml
@@ -133,7 +133,7 @@
   </div>
 
   <div class="one-third">
-    <aside class="sidebar" role="complementary">
+    <div class="sidebar" role="complementary">
 
       <div class="info-box info-box--grey">
         <h3 class="info-box__heading"><?php echo $this->translate('application.status'); ?></h3>
@@ -179,7 +179,7 @@
 
 
 
-    </aside>
+    </div>
   </div>
 
 </div>
