VOL-136: HGV - Create 'Removed vehicles table' on view the vehicles on your licence page

--- a/app/selfserve/module/Olcs/view/pages/licence/vehicle/list.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence/vehicle/list.phtml
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
 
-                <?php if ($this->showRemovedVehicles) {?>
+                <?php if ($this->showRemovedVehicles ?? false) {?>
                     <a id="<?php echo $this->showRemovedVehiclesExpanded ? 'action--hide-removed-vehicles' : 'action--show-removed-vehicles'; ?>"
                        href="<?php echo $this->toggleRemovedAction; ?>"
                        role="button"
