Accessibility : Bilateral permits - Overview page- "Edit country selection" button is read as link by the screen reader

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
@@ -76,7 +76,7 @@
 
             ?>
           </ul>
-          <a class="govuk-button govuk-button--secondary" href="<?php echo $countriesPageUrl; ?>">
+          <a class="govuk-button govuk-button--secondary" role="button" href="<?php echo $countriesPageUrl; ?>">
             <?php echo $this->escapeHtml($this->translate('permits.application.overview.edit-country-selection')); ?>
           </a>
         </li>
