--- a/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
@@ -52,6 +52,11 @@ if (!empty($uniqueCountries)) {
 
 ?>
         <?php echo $tables['valid-irhp-permits']; ?>
-        <?php echo $this->permitsDashboardLink('permits.link.return.to.dashboard'); ?>
+
+        <p class="govuk-body govuk-!-margin-top-4">
+            <a href="<?php echo $this->url('permits', [], [], true); ?>">
+                <?php echo $this->escapeHtml($this->translate('permits.link.return.to.dashboard')); ?>
+            </a>
+        </p>
     </div>
 </div>
