VOL-893: Use the correct info for the minutes till logout

--- a/app/selfserve/module/Olcs/view/partials/modal-session-timeout.phtml
+++ b/app/selfserve/module/Olcs/view/partials/modal-session-timeout.phtml
@@ -1,4 +1,4 @@
-<?php $redirectTimeout = round($this->sessionTimeoutWarning()->getRedirectTimeout() / 60); ?>
+<?php $redirectTimeout = round($this->sessionTimeoutWarning()->getSecondsBeforeExpiryWarning() / 60); ?>
 <div id="sessionTimeoutModal" class="modal__wrapper modal--blockBackground govuk-visually-hidden">
     <div class="modal">
         <div class="modal__header">
