--- a/app/selfserve/module/Olcs/view/pages/licence/vehicle/list.phtml
+++ b/app/selfserve/module/Olcs/view/pages/licence/vehicle/list.phtml
@@ -70,7 +70,7 @@
                     <?php } ?>
                 <?php } ?>
 
-                <?php echo $this->bottomContent ?>
+                <?php echo $this->partial(new \Olcs\View\Model\Licence\Vehicle\ChooseADifferentOptionViewModel()); ?>
             </div>
         </div>
     </div>
