--- a/app/selfserve/module/Olcs/view/pages/auth/login.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/login.phtml
@@ -14,8 +14,8 @@
         if (isset($failed) && $failed) {
             ?>
             <div class="validation-summary">
-                <h2><?php echo $this->translate('auth.login.failed.title'); ?></h2>
-                <p><?php echo $this->translate('auth.login.failed.reason.' . $failureReason); ?></p>
+                <h2><?php echo $this->escapeHtml($this->translate('auth.login.failed.title')); ?></h2>
+                <p><?php echo $this->escapeHtml($this->translate('auth.login.failed.reason.' . $failureReason)); ?></p>
             </div>
             <?php
         }
@@ -34,19 +34,19 @@
                     <?php echo $this->formElement($form->get('submit')); ?>
                 </div>
                 <div class="actions-container">
-                    <p><?php echo $this->translate('help-sign-in'); ?></p>
+                    <p><?php echo $this->escapeHtml($this->translate('help-sign-in')); ?></p>
                     <div class="guidance">
                         <ul class="list--compound">
                             <li>
                                 <a href="<?php echo $this->url('user-forgot-username'); ?>"
-                                   aria-label="<?php echo $this->translate('auth.forgot-username.label.audio'); ?>">
-                                    <?php echo $this->translate('auth.forgot-username.label'); ?>
+                                   aria-label="<?php echo $this->escapeHtml($this->translate('auth.forgot-username.label.audio')); ?>">
+                                    <?php echo $this->escapeHtml($this->translate('auth.forgot-username.label')); ?>
                                 </a>
                             </li>
                             <li>
                                 <a href="<?php echo $this->url('auth/forgot-password'); ?>"
-                                   aria-label="<?php echo $this->translate('auth.forgot-password.label.audio'); ?>">
-                                    <?php echo $this->translate('auth.forgot-password.label'); ?>
+                                   aria-label="<?php echo $this->escapeHtml($this->translate('auth.forgot-password.label.audio')); ?>">
+                                    <?php echo $this->escapeHtml($this->translate('auth.forgot-password.label')); ?>
                                 </a>
                             </li>
                         </ul>
