VOL-2161: Add missing param to forgot-password views

--- a/app/selfserve/module/Olcs/view/pages/auth/confirm-forgot-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/confirm-forgot-password.phtml
@@ -4,11 +4,11 @@
         'partials/page-header-simple', [
             'pageTitle' => $this->translate('auth.confirm-forgot-password.title'),
             'backUrl' => [
-                'url' => $this->url('auth/login'),
+                'url' => $this->url('auth/login/GET'),
             ],
         ]
     );
-    ?>    
+    ?>
 
     <div class="row">
         <div class="two-thirds">
