--- a/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
@@ -5,7 +5,7 @@
         [
             'pageTitle' => $this->translate('auth.forgot-password.title'),
             'backUrl' => [
-                'url' => $this->url('auth/login'),
+                'url' => $this->url('auth/login/GET'),
             ],
         ]
     );
