VOL-2296 fix selfserve user registration and account disabled redirects

--- a/app/selfserve/module/Olcs/view/olcs/user-registration/check-email.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/user-registration/check-email.phtml
@@ -27,7 +27,7 @@ echo $this->partial(
             ->translateReplace(
                 'user-registration.page.check-email.content',
                 [
-                    $this->getHelperPluginManager()->getServiceLocator()->get('Helper\Url')->fromRoute('auth/login')
+                    $this->getHelperPluginManager()->getServiceLocator()->get('Helper\Url')->fromRoute('auth/login/GET')
                 ]
             ); ?>
       </p>
