Change the name of the field that is locked to be totAuthHgvVehicles
Previously it was totAuthVehicles but this has now been changed in the form.

--- a/app/selfserve/module/Olcs/view/olcs/entity/licence/anonymous.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/entity/licence/anonymous.phtml
@@ -32,6 +32,8 @@
     ?>
 </div>
 
+<?php echo $this->render('partials/entity-view/authorisation'); ?>
+
 <?php
 if (!empty($transportManagerTable)) {
     ?>
