--- a/app/selfserve/module/Olcs/view/olcs/entity/licence/partner.phtml
+++ b/app/selfserve/module/Olcs/view/olcs/entity/licence/partner.phtml
@@ -48,6 +48,8 @@ if (!empty($operatingCentresTable)) {
 }
 ?>
 
+<?php echo $this->render('partials/entity-view/authorisation'); ?>
+
 <?php
 if (!empty($oppositionsTable)) {
     ?>
