--- a/app/internal/module/Olcs/view/pages/confirm.phtml
+++ b/app/internal/module/Olcs/view/pages/confirm.phtml
@@ -1,7 +1,7 @@
 <?php if (count($form) > 0): ?>
 
-<p><?php echo $this->translate($label); ?></p>
-<p><?php echo $this->translate($subText); ?></p>
+<p><?php echo $this->translate($label ?? ''); ?></p>
+<p><?php echo $this->translate($subText ?? ''); ?></p>
 <br/><br/>
 <?php echo $this->formErrors($form); ?>
 <?php echo $this->form($form); ?>
