VOL-2750 fix auth error messages

--- a/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/forgot-password.phtml
@@ -19,8 +19,8 @@
             if (isset($failed) && $failed) {
                 ?>
                 <div class="validation-summary">
-                    <h2><?php echo $this->translate('auth.forgot-password.failed.title'); ?></h2>
-                    <p><?php echo $this->translate('auth.forgot-password.failed.reason.' . $failureReason); ?></p>
+                    <h2><?php echo $this->escapeHtml($this->translate('auth.forgot-password.failed.title')); ?></h2>
+                    <p><?php echo $this->escapeHtml($this->translate($failureReason)); ?></p>
                 </div>
                 <?php
             }
