VOL-2569 add password validity information to expired password

--- a/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
+++ b/app/selfserve/module/Olcs/view/pages/auth/expired-password.phtml
@@ -4,6 +4,8 @@
         'partials/page-header-simple',
         [
             'pageTitle' => $this->translate('auth.expired-password.title'),
+            'pageHeaderText' => $this->translate('auth.change-password.subtitle'),
+            'pageHeaderTextEscape' => false,
         ]
     );
     ?>
